# ChangeLog for dev-ruby/locale
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/ChangeLog,v 1.50 2013/09/22 17:17:27 mrueg Exp $

*locale-2.0.9 (22 Sep 2013)

  22 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +locale-2.0.9.ebuild:
  Version bump.

  23 Apr 2013; Hans de Graaff <graaff@gentoo.org> locale-2.0.8.ebuild:
  Fix yard dependency issue by only building documentation when USE=doc, bug
  461790.

  02 Apr 2013; Patrick Lauer <patrick@gentoo.org> locale-2.0.8.ebuild:
  Fixing deps #461790

*locale-2.0.8 (14 Mar 2013)

  14 Mar 2013; Hans de Graaff <graaff@gentoo.org> +locale-2.0.8.ebuild:
  Version bump.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> locale-2.0.5-r3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> locale-2.0.5-r3.ebuild:
  Stable for ia64, wrt bug #448310

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> locale-2.0.5-r3.ebuild:
  Stable for alpha, wrt bug #448310

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> locale-2.0.5-r3.ebuild:
  Stable for sparc, wrt bug #448310

  29 Dec 2012; Jeroen Roovers <jer@gentoo.org> locale-2.0.5-r3.ebuild:
  Stable for HPPA (bug #448310).

  23 Dec 2012; Agostino Sarubbo <ago@gentoo.org> locale-2.0.5-r3.ebuild:
  Stable for ppc64, wrt bug #448310

  28 Oct 2012; Jeroen Roovers <jer@gentoo.org> locale-2.0.5-r3.ebuild:
  Marked ~hppa (bug #431290).

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> locale-2.0.5-r3.ebuild:
  Re-add ~alpha/~ia64/~sparc

  25 Aug 2012; Hans de Graaff <graaff@gentoo.org> -locale-2.0.5-r2.ebuild:
  Cleanup.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  22 Jul 2012; <nixnut@gentoo.org> locale-2.0.5-r3.ebuild:
  ppc stable #416583

  01 Jul 2012; Raúl Porcel <armin76@gentoo.org> locale-2.0.5-r2.ebuild,
  locale-2.0.5-r3.ebuild:
  Drop alpha keywords
