@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX locale-language-fixes.patch 8049 SHA256 7ad3a4143f5994090cd0d4b4fe5acee1117c1d318ddf1a5c9960338a7b8d1308 SHA512 f626ec846d1d3edb3124ee0e5526f6d4d29e646a3c513fe2dbf89b7aa877bc4b83c4a5bf4242d1062ae49af4896f8f1e2ef2e224d742285eee00ed3a4db12259 WHIRLPOOL 8f0cb39137ef5dccac975c2375a01d08413dd88b0d1c1715b527f84c1618de1c199877fdffb1e336b80d0f5cdfa201f51a942aaf67c1667b42235feff09ade13
 DIST locale-2.0.5.gem 111104 SHA256 28baf0410c9742eb49402200f47b99d9d4b793e02a5436a7275a89d273eafe00 SHA512 1261c182a5095623f894a19cb80a770972031ecdb7af95a8bc2ac5c3d872cc57e24f24dccf52570033b1ea82109cd2198f21cc533a23002c086dac0d8199f519 WHIRLPOOL bab1b1af3c6a03bf4345fdb0b4e77472f845ad516e0ab40e558c368811672a68eb9186f5bda9151e2b5d94e76b71372e699556292bf7ddc5520541b24cd48a0d
 DIST locale-2.0.8-git.tgz 100389 SHA256 df610d430f1773e437a74a65c0c02070516872285b8f9671d4e13de31fb20634 SHA512 32c9fe9208813916e5df4844312b483b9bab0675f0224ada0e648892eff365a4bd255a365e91b4e36c27a1dbd238bca5873860eebc63b685dadd2f7764dc99d0 WHIRLPOOL 8cc957e0ccfd79a6ca9f6b1af612cab5ce85111e36af6e56a9793cb70d7353569cd503d59e6a80ee3673d58d59a397f2dac66df19245eb10f8161707d5eaf6e0
 DIST locale-2.0.9-git.tgz 101068 SHA256 59db413867801f85847174cc9d5078f464a7bf71bb1cf3aab5d426c036c7b320 SHA512 aa5e911f852c6e2ac76434c0f1673f5046fb4451e413eeba76b187347fa9fa41665a5b4538c4185a28ccfe09126cf235248f8460b09e74f2316396ffde6de5e0 WHIRLPOOL 6694d03eadb8dab23579d9c15ba4bbb28d584ecd432d31839bcb883ea66f9de9f30a0a07b62bdb6ae9ade0ea85ec353de197283e060ad43404ceb84acb31047c
 EBUILD locale-2.0.5-r3.ebuild 1260 SHA256 dd133172f942ff391fc1670e3cb0d0afef38c80648e6abe47e474f830dbeafe1 SHA512 5ab1e5cd7a730e740a9bb63a424a4295ec9aebf03d1a1385019770f8f3349787addc82e64319ae331dd6d4d855c96b1292840a3ae87341bfe76acd21f0ba3542 WHIRLPOOL 44e4b8d7a7dab73d719934e25291f90ff831b7a3ec715c214d43fdaab15c336526118ca969f0f84f8dcb11d59dadbc59bfb51ce0e639c5dd08d6345808206586
 EBUILD locale-2.0.8.ebuild 1180 SHA256 f8788c93b7f7b16439c0fb554cb0ca8f9093a5ebcc3908944d1fe0fb739307da SHA512 f6e68984a81b2710332bab9a19bed53fe3236467f37e44b3a648eef51fbb239919e543f7648df862e139736dee1c8504c64f6b84151b8af8837ac99179032b56 WHIRLPOOL 84219a649fc19b2542dfb56af3cef48e8e8d900a048c559a5db47a384083f432ba8c23e98fc486adba0f5872e2d621064c50a332f244a72ce1f23220907b3c6e
-EBUILD locale-2.0.9.ebuild 1173 SHA256 e9c8f29621ad20967b2668e11f1bde1cb3a508c8a1c5dc17fdf36536a44b3d62 SHA512 cfc2e8fbbb67c6ef6c2381abc18fe81ca40b0a1196391c67b576f78359c8659e36b69469134374cf1f6b675bd02e9bfb3aed8f4d39770311a3b6590cb29d3f89 WHIRLPOOL 09e0d1938fa90d9ba79825ceb942a6f953b0419fd7fd204893ea86ffdd5df8616bb055a708636a6359fb53aa23d00316bf4bb6a1121a1f5da49e772d19527a77
-MISC ChangeLog 6401 SHA256 5140326e07c507182a1d72148da96c0ba65cb353145a10939186bd21c2854f39 SHA512 670409cfc0f7b06eeb5e6541b2eae360c569cd600f0a942fb4923922929d94ff19cee996852ecfa968b9c7099947b11bec2ecce82532c1ef4460a3ef5682dbae WHIRLPOOL 538e08c40ebdb1fd685e1c0b655e0d799fa941ade627dddedb81b00ec6199275e896ff277c5aeaa57e00b2a5b0950f47cef483cdd3c6ad0d4d36e8fa8a2f9655
+EBUILD locale-2.0.9.ebuild 1504 SHA256 043b0a2d8f011477de3e2d33713757ced84b4cb56cdfdd75c25d2ac7ea14bbb5 SHA512 f4a9a9b17c8642d576904d51fcb4d753ae90a3471b3070705d26ba6468121622148817062d06f2e50e113579e94230bb61a8006f78bf74ad933290c91252b05e WHIRLPOOL 1f8a47778cd68943d73ceb0b9093252e17ee68fbdf0aa2b4e91f570444614d13b386fb6da90dd07a72bc336826b8e45b99737dfcd1918ad6fb57ea30f30c907f
+MISC ChangeLog 6505 SHA256 e59da6cea1f9d91d00a61ccefebfc1dfd753f535807e504e782d80aae427dc23 SHA512 132d2d4bb34319ad8bb26380fbd32c3fce76c8873151c79a1743cf4f2508a9cab38a09b28a6e824811ee8af47d07d3cbdd750ccd17133ef34caa66156ba19b50 WHIRLPOOL 33cc692fadb54a53b5a4bb24c9559c91727284709ff4a12b8375eadb7ea9df0fffb3b15cad9923f364a024cfdfef7bdbc0d313ca8752bddc4f11abbe8b215e44
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlJrZRMACgkQiIP6VqMIqNdFHAD/TNMQ9fz6rz9tSjh4/+q3R6Re
+Xdfyub9H7+q4k3UiyuQBAJDoxcIAWz4rVyKYooQvbWWd1pcLRBgcx1etigidDI8R
+=37mF
+-----END PGP SIGNATURE-----
