@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/locale
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/ChangeLog,v 1.50 2013/09/22 17:17:27 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/ChangeLog,v 1.51 2013/10/26 06:45:38 graaff Exp $
+
+  26 Oct 2013; Hans de Graaff <graaff@gentoo.org> locale-2.0.9.ebuild:
+  Avoid failing test on jruby.
 
 *locale-2.0.9 (22 Sep 2013)
 
